# pre-commit-trim-spaces-in-paths

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
tests/: conftest.py  test_git_integration.py  test_git_operations.py  test_main_functionality.py  test_normalize.py  test_parse_args.py  test_precommit_hook_simulation.py  test_repo_root.py
trim_spaces_in_paths/: __init__.py  trim_spaces_in_paths.py
